// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
  1 |
  2 |         type Mutation {
> 3 |           createUser: Boolean
    |            ^^^^^^^^^^^^ Unexpected scalar result type "Boolean".
  4 |         }
  5 |       
`;

exports[` 2`] = `
  1 |
  2 |         type Mutation
  3 |
  4 |         extend type Mutation {
> 5 |           createUser: Boolean
    |            ^^^^^^^^^^^^ Unexpected scalar result type "Boolean".
  6 |         }
  7 |       
`;

exports[` 3`] = `
  1 |
  2 |         type RootMutation {
> 3 |           createUser: Boolean!
    |            ^^^^^^^^^^^^^^^^^^^ Unexpected scalar result type "Boolean".
  4 |         }
  5 |
  6 |         schema {
  7 |           mutation: RootMutation
  8 |         }
  9 |       
`;

exports[` 4`] = `
   1 |
   2 |         type RootMutation
   3 |         extend type RootMutation {
>  4 |           createUser: Boolean!
     |            ^^^^^^^^^^^^^^^^^^^ Unexpected scalar result type "Boolean".
   5 |         }
   6 |
   7 |         schema {
   8 |           mutation: RootMutation
   9 |         }
  10 |       
`;

exports[` 5`] = `
  1 |
  2 |         type Mutation {
  3 |           createUser: User!
> 4 |           updateUser: Int
    |            ^^^^^^^^^^^^ Unexpected scalar result type "Int".
  5 |           deleteUser: Boolean
  6 |         }
  7 |       
`;

exports[` 6`] = `
  1 |
  2 |         type Mutation {
  3 |           createUser: User!
  4 |           updateUser: Int
> 5 |           deleteUser: Boolean
    |            ^^^^^^^^^^^^ Unexpected scalar result type "Boolean".
  6 |         }
  7 |       
`;
